# Iron-Age-IIA-Negev-Highlands-ABM

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  Model_Flowchart.ipynb  README.md  Run_Model - simplified.html  convert_to_numpy.ipynb  dfs_model.ipynb  distac_pw.tfw  distac_pw.tif  env111.txt  environment.yml  ext_raster.npy  obj_explain.md  per_data.h5  per_data_10_25.h5  place_raster.npy  pyproject.toml  requirements.txt  run_numpy.html  run_numpy.ipynb  run_numpy.md  visualization.py
.github/workflows/: ci.yml
Code/: calibration.ipynb  convert_to_numpy.ipynb  model.py  model_code_26.ipynb  model_code_26_2.ipynb  model_opt.py  model_opt_sensitivity.py  run_numpy.ipynb  run_numpy.md  sensitivity_analysis.ipynb  sensitivity_model.py
Code/old/: Run_Model - simplified.ipynb
Results/opt/: opt_study.db
Results/opt/trial_0/run_2025-04-09_12-51-36/: household_data.csv
Results/opt/trial_0/run_2025-04-09_13-03-23/: household_data.csv
Results/opt/trial_1/run_2025-04-09_13-06-12/: household_data.csv
Results/opt/trial_1/run_2025-04-09_13-09-01/: household_data.csv
Results/opt/trial_1/run_2025-04-09_13-14-39/: household_data.csv
Results/opt/trial_1/run_2025-04-09_13-17-30/: household_data.csv
Results/opt/trial_2/run_2025-04-09_13-35-52/: household_data.csv
Results/opt/trial_2/run_2025-04-09_13-41-31/: household_data.csv
Results/opt/trial_2/run_2025-04-09_13-44-19/: household_data.csv
Results/opt/trial_2/run_2025-04-09_13-47-11/: household_data.csv
Results/opt/trial_2/run_2025-04-09_13-55-37/: household_data.csv
Results/opt/trial_3/run_2025-04-09_14-04-11/: household_data.csv
Results/opt/trial_3/run_2025-04-09_14-07-16/: household_data.csv
Results/opt/trial_3/run_2025-04-09_14-31-57/: household_data.csv
Results/opt/trial_4/run_2025-04-09_14-40-50/: household_data.csv
Results/opt/trial_4/run_2025-04-09_14-43-44/: household_data.csv
Results/runs_simp/run_2025-04-07_13-06-17/: household_data.csv
Results/runs_simp/run_2025-04-07_20-26-03/: household_data.csv
Results/runs_simp/run_2025-04-08_09-32-08/: household_data.csv
Results/runs_simp/run_2025-04-09_11-46-13/: household_data.csv
Results/runs_simp/run_2025-04-09_11-59-49/: yearly_weights_dict.json
Results/runs_simp/run_2025-04-27_17-12-07/: household_data.csv
Results/runs_simp/run_2026-01-07_08-38-16/: household_data.csv
Thesis Chapter/: ands.docx  ch.4-ABM.md  comparison.md  instruction.txt  tables.docx
configs/: default.yaml
docs/: DATA.md  INSTALL.md  ODD.md  ZENODO_UPLOAD.md  objective_function.md
legacy/: README.md  model_code_26_2.ipynb  sensitivity_analysis.ipynb
opt/: opt_study.db
opt/trial_0/run_2025-04-09_12-19-45/: household_data.csv
opt/trial_0/run_2025-04-09_12-25-45/: household_data.csv
opt/trial_0/run_2025-04-09_12-32-16/: household_data.csv
opt/trial_0/run_2025-04-09_12-38-45/: household_data.csv
opt/trial_0/run_2025-04-09_12-45-09/: household_data.csv
opt/trial_0/run_2025-04-09_12-55-01/: household_data.csv  yearly_weights_dict.json
opt/trial_0/run_2025-04-09_12-57-49/: household_data.csv
opt/trial_0/run_2025-04-09_13-00-37/: household_data.csv
opt/trial_1/run_2025-04-09_13-11-51/: household_data.csv
opt/trial_1/run_2025-04-09_13-20-21/: household_data.csv
opt/trial_1/run_2025-04-09_13-24-34/: household_data.csv
opt/trial_1/run_2025-04-09_13-27-22/: household_data.csv
opt/trial_1/run_2025-04-09_13-30-12/: household_data.csv
opt/trial_1/run_2025-04-09_13-33-03/: household_data.csv
opt/trial_2/run_2025-04-09_13-38-42/: household_data.csv
opt/trial_2/run_2025-04-09_13-49-59/: household_data.csv
opt/trial_2/run_2025-04-09_13-52-47/: household_data.csv
opt/trial_2/run_2025-04-09_13-58-28/: household_data.csv
opt/trial_2/run_2025-04-09_14-01-19/: household_data.csv
opt/trial_3/run_2025-04-09_14-10-21/: household_data.csv
opt/trial_3/run_2025-04-09_14-13-25/: household_data.csv
opt/trial_3/run_2025-04-09_14-16-30/: household_data.csv
opt/trial_3/run_2025-04-09_14-19-34/: household_data.csv
opt/trial_3/run_2025-04-09_14-22-41/: household_data.csv
opt/trial_3/run_2025-04-09_14-25-47/: household_data.csv
opt/trial_3/run_2025-04-09_14-28-54/: household_data.csv
opt/trial_4/run_2025-04-09_14-35-04/: household_data.csv
opt/trial_4/run_2025-04-09_14-37-56/: household_data.csv
opt/trial_4/run_2025-04-09_14-46-40/: household_data.csv
opt/trial_4/run_2025-04-09_14-49-38/: household_data.csv
opt/trial_4/run_2025-04-09_14-52-31/: household_data.csv  permanent_weights_dict.json
opt/trial_4/run_2025-04-09_14-55-28/: household_data.csv
opt/trial_4/run_2025-04-09_14-58-23/: household_data.csv
opt/trial_4/run_2025-04-09_15-01-17/: household_data.csv
runs_simp/run_2025-04-07_13-06-17/: permanent_weights_dict.json  yearly_weights_dict.json
runs_simp/run_2025-04-07_20-23-22/: household_data.csv
runs_simp/run_2025-04-09_11-43-48/: household_data.csv  permanent_weights_dict.json
runs_simp/run_2025-04-09_11-53-44/: household_data.csv
runs_simp/run_2025-04-09_11-59-49/: household_data.csv
runs_simp/run_2025-04-11_10-04-45/: household_data.csv
runs_simp/run_2025-04-11_10-09-02/: household_data.csv
runs_simp/run_2025-10-16_14-34-21/: household_data.csv
scripts/: build_data_bundle.py  download_data.py  inspect_data.py
src/nomad_abm/: __init__.py  __main__.py  cli.py  model.py  sensitivity.py
tests/: conftest.py  test_smoke.py
tests/fixtures/: make_fixture.py
thesis/: appendix-5-ABM.docx  ch.4-ABM.docx  chapter-5-ABM.docx
