[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nomad-abm"
version = "0.1.0"
description = "Agent-based model of Iron Age IIA settlement in the Negev Highlands"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "Itay Lubel" },
]
keywords = [
  "agent-based-model",
  "archaeology",
  "iron-age",
  "negev-highlands",
  "mesa",
  "simulation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
# Runtime dependencies are pinned in environment.yml / requirements.txt.
# This list mirrors them at a higher level so `pip install .` works without
# the full conda environment. Versions are minor-floored to match the
# environment file.
dependencies = [
  "numpy>=1.26,<2.0",
  "pandas>=2.1,<2.3",
  "scipy>=1.11,<1.13",
  "rasterio>=1.3.9,<1.4",
  "geopandas>=0.14,<0.15",
  "fiona>=1.9,<2.0",
  "shapely>=2.0,<3.0",
  "pyproj>=3.6,<4.0",
  "matplotlib>=3.8,<3.10",
  "seaborn>=0.13,<0.14",
  "folium>=0.15,<0.18",
  "mesa>=3.0,<3.2",
  "optuna>=3.5,<4.0",
  "scikit-learn>=1.4,<1.6",
  "h5py>=3.10,<3.13",
  "tqdm>=4.66,<5.0",
  "sympy>=1.12,<2.0",
  "pysal>=24.1",
  "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
  "black>=24.8",
  "pytest>=8.0",
  "pre-commit>=3.8",
  "nbstripout>=0.7",
]

[project.urls]
Homepage = "https://github.com/itaylub/ABM"
Issues = "https://github.com/itaylub/ABM/issues"

[project.scripts]
nomad-abm = "nomad_abm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
  "Thesis Chapter",
  "Results",
  "Data",
  "legacy",
  "*.ipynb",
]

[tool.ruff.lint]
# Conservative initial ruleset: catches real bugs (syntax errors,
# undefined names) without forcing a wholesale reformat of the existing
# code. Stricter rules (E, W, I, B, UP) will be enabled in a future
# pass once the codebase has been formatted with black.
select = [
  "E9",   # syntax errors
  "F63",  # invalid comparisons
  "F7",   # suspicious code
  "F82",  # undefined-name
]

[tool.ruff.lint.per-file-ignores]
# The model modules intentionally set OMP_NUM_THREADS etc. between
# `import os` and the numpy imports, which triggers E402 (module-level
# import not at top of file). The pattern is required to keep
# numpy/scipy single-threaded under multiprocessing.
"src/nomad_abm/model.py" = ["E402"]
"src/nomad_abm/sensitivity.py" = ["E402"]

[tool.black]
line-length = 120
target-version = ["py311"]
extend-exclude = '''
(
  ^/Thesis\ Chapter/
  | ^/Results/
  | ^/Data/
)
'''

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers"
